@@ -3,14 +3,19 @@
 # Copyright (c) https://github.com/pylint-dev/astroid/blob/main/CONTRIBUTORS.txt
 
 from __future__ import annotations
+from typing import TYPE_CHECKING
 
 from astroid.brain.helpers import register_module_extender
-from astroid.builder import extract_node, parse
+from astroid.builder import extract_node, parse, AstroidBuilder
+from astroid.const import PY313_PLUS
 from astroid.context import InferenceContext
 from astroid.exceptions import AttributeInferenceError
 from astroid.manager import AstroidManager
 from astroid.nodes.scoped_nodes import ClassDef
 
+
+if TYPE_CHECKING:
+    from astroid import nodes
 
 def _collections_transform():
     return parse(
@@ -24,6 +29,11 @@ def _collections_transform():
         + _deque_mock()
         + _ordered_dict_mock()
     )
+
+
+def _collections_abc_313_transform() -> nodes.Module:
+    """See https://github.com/python/cpython/pull/124735"""
+    return AstroidBuilder(AstroidManager()).string_build("from _collections_abc import *")
 
 
 def _deque_mock():
@@ -118,3 +128,6 @@ def register(manager: AstroidManager) -> None:
     manager.register_transform(
         ClassDef, easy_class_getitem_inference, _looks_like_subscriptable
     )
+
+    if PY313_PLUS:
+        register_module_extender(manager, "collections.abc", _collections_abc_313_transform)
